# src/routers/product_router.js
@@ -2,74 +2,71 @@ const express = require('express')
 const Product = require('../models/product')
 
 const router = new express.Router()
+const cors = require('cors')
 
-router.post('/products', async(req, res) => {
-    const product = new Product(req.body)
-    try {
-        await product.save()
-        res.status(201).send(product)
-    } catch (e) {
-        res.status(400).send(e)
-    }
-});
-
-
-router.get('/products', async(req, res) => {
-    try {
-        const products = await Product.find({})
-        if (!products) {
-            return res.send(404).send()
-        }
-        res.status(200).send(products)
-    } catch (e) {
-        res.status(500).send()
-        console.log(e)
-    }
-});
-
-router.get('/products/:id', async(req, res) => {
-    try {
-        const product = await Product.findById(req.params.id)
-        if (!product) {
-            return res.send(404).send()
-        }
-        res.status(200).send(product)
-    } catch (e) {
-        res.status(500).send()
-        console.log(e)
-    }
-});
-
-
-router.delete('/products/:id', async(req, res) => {
-    const product = await Product.findByIdAndDelete(req.params.id)
-    try {
-        if (!product) {
-            return res.status(404).send()
-        }
-        res.status(200).send(product)
-            //await req.product.remove()
-            //res.send(req.product)
-    } catch (e) {
-        console.log(e)
-        res.status(500).send()
-    }
+router.post('/products', async (req, res) => {
+  const product = new Product(req.body)
+  try {
+    await product.save()
+    res.status(201).send(product)
+  } catch (e) {
+    res.status(400).send(e)
+  }
 })
 
-
-router.delete('/products', async(req, res) => {
-    const product = await Product.deleteMany({})
-    try {
-        if (!product) {
-            return res.status(404).send()
-        }
-        //await req.product.remove()
-        res.status(200).send(product)
-    } catch (e) {
-        console.log(e)
-        res.status(500).send()
+router.get('/products', cors(), async (req, res) => {
+  try {
+    const products = await Product.find({})
+    if (!products) {
+      return res.send(404).send()
     }
+    res.status(200).send(products)
+  } catch (e) {
+    res.status(500).send()
+    console.log(e)
+  }
 })
 
+router.get('/products/:id', async (req, res) => {
+  try {
+    const product = await Product.findById(req.params.id)
+    if (!product) {
+      return res.send(404).send()
+    }
+    res.status(200).send(product)
+  } catch (e) {
+    res.status(500).send()
+    console.log(e)
+  }
+})
+
+router.delete('/products/:id', async (req, res) => {
+  const product = await Product.findByIdAndDelete(req.params.id)
+  try {
+    if (!product) {
+      return res.status(404).send()
+    }
+    res.status(200).send(product)
+    //await req.product.remove()
+    //res.send(req.product)
+  } catch (e) {
+    console.log(e)
+    res.status(500).send()
+  }
+})
+
+router.delete('/products', async (req, res) => {
+  const product = await Product.deleteMany({})
+  try {
+    if (!product) {
+      return res.status(404).send()
+    }
+    //await req.product.remove()
+    res.status(200).send(product)
+  } catch (e) {
+    console.log(e)
+    res.status(500).send()
+  }
+})
 
 module.exports = router
